fixed timer on mobile

--- a/src/components/homePageTimer/HomePageTimer.module.scss
+++ b/src/components/homePageTimer/HomePageTimer.module.scss
@@ -2,9 +2,13 @@
 
 .container {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   width: 100%;
   margin-bottom: 56px;
+
+  @include desktop-screen {
+    justify-content: flex-end;
+  }
 }
 
 .col {
@@ -14,18 +18,24 @@
 
 .heading {
   font-weight: 700;
-  font-size: 26px;
+  font-size: 16px;
   color: var(--orange);
   text-transform: uppercase;
   align-self: flex-start;
 
   @include desktop-screen {
     align-self: flex-end;
+    font-size: 26px;
   }
 }
 
 .timer {
   font-family: 500;
-  font-size: 42px;
+  font-size: 20px;
   color: #038d93;
+
+  @include desktop-screen {
+    align-self: flex-end;
+    font-size: 42px;
+  }
 }
